--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,7 @@ Source: fqterm
 Section: x11
 Priority: optional
 Maintainer: LI Daobing <lidaobing@gmail.com>
-Build-Depends: cdbs, debhelper (>= 5)
+Build-Depends: cdbs, debhelper (>= 5), dpatch
 Standards-Version: 3.7.3
 Homepage: http://code.google.com/p/fqterm
 
