--- a/debian/rules
+++ b/debian/rules
@@ -2,3 +2,4 @@
   
 include /usr/share/cdbs/1/rules/debhelper.mk
 include /usr/share/cdbs/1/class/cmake.mk
+include /usr/share/cdbs/1/rules/dpatch.mk
