--- a/debian/control
+++ b/debian/control
@@ -2,8 +2,8 @@ Source: fqterm
 Section: x11
 Priority: optional
 Maintainer: LI Daobing <lidaobing@gmail.com>
-Build-Depends: cdbs, debhelper (>= 5), libqt4-dev
-Standards-Version: 3.7.3
+Build-Depends: cdbs, debhelper (>= 5), libqt4-dev, cmake
+Standards-Version: 3.8.0
 Homepage: http://code.google.com/p/fqterm
 
 Package: fqterm
