--- a/debian/control
+++ b/debian/control
@@ -5,10 +5,14 @@ Maintainer: LI Daobing <lidaobing@gmail.com>
 Build-Depends: cdbs, debhelper (>= 5), libqt4-dev, cmake
 Standards-Version: 3.8.0
 Homepage: http://code.google.com/p/fqterm
+Vcs-Browser: http://git.debian.org/?p=chinese/fqterm.git
+Vcs-Git: git://git.debian.org/git/chinese/fqterm.git
+DM-Upload-Allowed: yes
+
 
 Package: fqterm
 Architecture: any
-Depends: ${shlibs:Depends}, ${misc:Depends}
-Description: cross-platform terminal emulator
+Depends: ${shlibs:Depends}
+Description: BBS client writtern in QT
  FQTerm supports telnet/ssh1/ssh2 protocols and can process ANSI control
  sequences. It can be used to login BBS sites or *NIX hosts.
