--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,8 @@ Source: fqterm
 Section: x11
 Priority: optional
 Maintainer: LI Daobing <lidaobing@gmail.com>
-Build-Depends: cdbs, debhelper (>= 5), libqt4-dev, cmake
+Build-Depends: cdbs, debhelper (>= 5), libqt4-dev, cmake,
+ libglib2.0-dev, libssl-dev
 Standards-Version: 3.8.0
 Homepage: http://code.google.com/p/fqterm
 Vcs-Browser: http://git.debian.org/?p=chinese/fqterm.git
