--- a/debian/control
+++ b/debian/control
@@ -1,15 +1,14 @@
 Source: fqterm
 Section: x11
 Priority: optional
-Maintainer: LI Daobing <lidaobing@gmail.com>
+Maintainer: Ubuntu MOTU Developers <ubuntu-motu@lists.ubuntu.com>
+XSBC-Original-Maintainer: LI Daobing <lidaobing@gmail.com>
 Build-Depends: cdbs, debhelper (>= 5), libqt4-dev, cmake,
  libglib2.0-dev, libssl-dev
 Standards-Version: 3.8.0
 Homepage: http://code.google.com/p/fqterm
 Vcs-Browser: http://git.debian.org/?p=chinese/fqterm.git
 Vcs-Git: git://git.debian.org/git/chinese/fqterm.git
-DM-Upload-Allowed: yes
-
 
 Package: fqterm
 Architecture: any
