--- a/debian/control
+++ b/debian/control
@@ -13,6 +13,10 @@ Vcs-Git: git://git.debian.org/git/chinese/fqterm.git
 Package: fqterm
 Architecture: any
 Depends: ${shlibs:Depends}
-Description: BBS client writtern in QT
- FQTerm supports telnet/ssh1/ssh2 protocols and can process ANSI control
+Description: BBS client writtern in QT4
+ FQTerm is one of the most widely used BBS client in China, it
+ supports telnet/ssh1/ssh2 protocols and can process ANSI control
  sequences. It can be used to login BBS sites or *NIX hosts.
+ .
+ Almost all the BBSes in Greater China Region are in BIG5 or GBK
+ encoding. So FQTerm only support these two encodings and ASCII.
