--- a/debian/control
+++ b/debian/control
@@ -1,8 +1,7 @@
 Source: fqterm
 Section: x11
 Priority: optional
-Maintainer: Ubuntu MOTU Developers <ubuntu-motu@lists.ubuntu.com>
-XSBC-Original-Maintainer: LI Daobing <lidaobing@gmail.com>
+Maintainer: LI Daobing <lidaobing@gmail.com>
 Build-Depends: cdbs, debhelper (>= 5), libqt4-dev, cmake,
  libglib2.0-dev, libssl-dev
 Standards-Version: 3.8.0
