Imported Upstream version 0.9.5.2

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 project(fqterm)
 
-set(FQTERM_VERSION "0.9.4")
+set(FQTERM_VERSION "0.9.5")
 
 cmake_minimum_required( VERSION 2.4.2 FATAL_ERROR )
 
@@ -26,11 +26,23 @@ qt4_add_translation(fqterm_qm_files
 add_custom_target(fqterm_qm_target
   DEPENDS ${fqterm_qm_files}
 )
+#FIND_PACKAGE(PythonLibs) 
+#if (PYTHONLIBS_FOUND)
+#  SET(PYTHON_LIB ${PYTHON_LIBRARIES}) 
+#  INCLUDE_DIRECTORIES(${PYTHON_INCLUDE_PATH}) 
+#  ADD_DEFINITIONS(-DHAVE_PYTHON)
+#else (PYTHONLIBS_FOUND)
+#  SET(PYTHON_LIB)
+#endif (PYTHONLIBS_FOUND)
 
 IF(WIN32)
   FILE(READ ${QT_LIBRARY_DIR}/QtCore.prl FQ_CORE_QT_CONFIG)
 ELSE(WIN32)
-  FILE(READ ${QT_LIBRARY_DIR}/libQtCore.prl FQ_CORE_QT_CONFIG)
+  IF(APPLE)
+    FILE(READ ${QT_LIBRARY_DIR}/QtCore.framework/QtCore.prl FQ_CORE_QT_CONFIG)
+  ELSE(APPLE)
+    FILE(READ ${QT_LIBRARY_DIR}/libQtCore.prl FQ_CORE_QT_CONFIG)
+  ENDIF(APPLE)
 ENDIF(WIN32)
 
 IF(NOT FQ_CORE_QT_CONFIG MATCHES "static")
@@ -64,3 +76,5 @@ IF(SUB_CMAKELIST MATCHES "UNKNOWN")
 ELSE(SUB_CMAKELIST MATCHES "UNKNOWN")
   INCLUDE("${SUB_CMAKELIST}")
 ENDIF(SUB_CMAKELIST MATCHES "UNKNOWN")
+
+
