--- a/debian/control
+++ b/debian/control
@@ -12,9 +12,9 @@ Vcs-Git: git://git.debian.org/git/chinese/fqterm.git
 Package: fqterm
 Architecture: any
 Depends: ${shlibs:Depends}, ${misc:Depends}
-Description: BBS client writtern in QT4
+Description: BBS client written in QT4
  FQTerm is one of the most widely used BBS client in China, it
- supports telnet/ssh1/ssh2 protocols and can process ANSI control
+ supports Telnet/SSH1/SSH2 protocols and can process ANSI control
  sequences. It can be used to login BBS sites or *NIX hosts.
  .
  Almost all the BBSes in Greater China Region are in BIG5 or GBK
