--- a/debian/control
+++ b/debian/control
@@ -1,7 +1,9 @@
 Source: fqterm
 Section: x11
 Priority: optional
-Maintainer: LI Daobing <lidaobing@debian.org>
+Maintainer: Debian Chinese Team <chinese-developers@lists.alioth.debian.org>
+Uploaders:
+ LI Daobing <lidaobing@debian.org>
 Build-Depends: cdbs, debhelper (>= 5), libqt4-dev, cmake,
  libglib2.0-dev, libssl-dev
 Standards-Version: 3.8.4
