--- a/debian/control
+++ b/debian/control
@@ -5,13 +5,15 @@ Maintainer: Debian Chinese Team <chinese-developers@lists.alioth.debian.org>
 Uploaders:
  Boyuan Yang <073plan@gmail.com>,
 Build-Depends:
- cdbs,
  cmake,
  debhelper (>= 10),
  libglib2.0-dev,
- libqt4-dev,
  libssl-dev,
  libx11-dev,
+ qtbase5-dev,
+ qtbase5-dev-tools,
+ qtmultimedia5-dev,
+ qtscript5-dev,
 Standards-Version: 3.9.8
 Homepage: https://github.com/mytbk/fqterm
 Vcs-Browser: https://anonscm.debian.org/git/chinese/fqterm.git
