--- a/debian/rules
+++ b/debian/rules
@@ -1,10 +1,26 @@
 #!/usr/bin/make -f
+# -*- makefile -*-
+# Uncomment this to turn on verbose mode.
+# export DH_VERBOSE=1
 
-DEB_CLEAN_EXCLUDE = res/userconf/address.cfg.orig res/userconf/fqterm.cfg.orig res/userconf/language.cfg.orig
-  
-include /usr/share/cdbs/1/rules/debhelper.mk
-include /usr/share/cdbs/1/class/cmake.mk
+# see FEATURE AREAS in dpkg-buildflags(1)
+export DEB_BUILD_MAINT_OPTIONS = hardening=+all
+export DEB_LDFLAGS_MAINT_APPEND = -Wl,--as-needed
+export QT_SELECT := 5
 
-install/fqterm::
+%:
+	dh $@
+
+override_dh_auto_configure:
+	dh_auto_configure -- -DUSE_QT5=1
+
+override_dh_auto_install:
+	dh_auto_install --
 	rm -f debian/fqterm/usr/share/FQTerm/fqterm.sh
 	rm -f debian/fqterm/usr/share/FQTerm/fqterm.desktop.in
+
+override_dh_clean:
+	dh_clean \
+	    -Xaddress.cfg.orig \
+	    -Xfqterm.cfg.orig  \
+	    -Xlanguage.cfg.orig --
